--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -14,12 +14,12 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/request_permission_button"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            app:icon="@drawable/baseline_add_a_photo_24"
-            android:text="Take Image"
+            android:layout_width="355dp"
+            android:layout_height="match_parent"
             android:layout_marginEnd="5dp"
-            android:layout_height="match_parent"/>
+            android:layout_weight="1"
+            android:text="Take Image"
+            app:icon="@drawable/baseline_add_a_photo_24" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/recognizeTextbtn"
@@ -58,7 +58,7 @@
 
     <EditText
         android:id="@+id/recognizedTextEt"
-        android:layout_width="match_parent"
+        android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:hint="your answer"
         android:minHeight="48dp"
