--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0070CC</color>
+    <color name="black_100">#010002</color>
+    <color name="blue_200">#68BBFE</color>
+    <color name="grey">#C1C1C1</color>
+    <color name="grey_100">#D9D9D9</color>
 </resources>
